--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mi Página Web</title>
+    <title>Acerca de</title>
     <link rel="stylesheet" href="styles.css"> <!-- Incluye el archivo de estilos si lo tienes -->
 </head>
 <body>
@@ -18,9 +18,10 @@
         </nav>
     </header>
     <main>
-        <h2>Bienvenido</h2>
-        <p>Este es el cuerpo de la página con imágenes y textos.</p>
-        <img src="ruta/a/imagen.jpg" alt="Descripción de la imagen">
+        <h2>Acerca de</h2>
+        <p>Esta página contiene información sobre nosotros.</p>
+        <p>Somos un equipo dedicado a ofrecer los mejores servicios web.</p>
+        <img src="ruta/a/imagen_acerca.jpg" alt="Descripción de la imagen acerca de nosotros">
     </main>
     <footer>
         <p>&copy; 2024 Mi Página Web. Todos los derechos reservados.</p>
