--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mi Página Web</title>
+    <title>Contacto</title>
     <link rel="stylesheet" href="styles.css"> <!-- Incluye el archivo de estilos si lo tienes -->
 </head>
 <body>
@@ -18,9 +18,20 @@
         </nav>
     </header>
     <main>
-        <h2>Bienvenido</h2>
-        <p>Este es el cuerpo de la página con imágenes y textos.</p>
-        <img src="ruta/a/imagen.jpg" alt="Descripción de la imagen">
+        <h2>Contacto</h2>
+        <p>Si tienes alguna pregunta, por favor llena el siguiente formulario para contactarnos:</p>
+        <form action="#" method="post">
+            <label for="nombre">Nombre:</label>
+            <input type="text" id="nombre" name="nombre" required>
+            <br>
+            <label for="email">Correo electrónico:</label>
+            <input type="email" id="email" name="email" required>
+            <br>
+            <label for="mensaje">Mensaje:</label>
+            <textarea id="mensaje" name="mensaje" required></textarea>
+            <br>
+            <input type="submit" value="Enviar">
+        </form>
     </main>
     <footer>
         <p>&copy; 2024 Mi Página Web. Todos los derechos reservados.</p>
